; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_pci_emul.c_CFGREAD.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_pci_emul.c_CFGREAD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_devinst = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_devinst*, i32, i32)* @CFGREAD to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CFGREAD(%struct.pci_devinst* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pci_devinst*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.pci_devinst* %0, %struct.pci_devinst** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = icmp eq i32 %8, 1
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load %struct.pci_devinst*, %struct.pci_devinst** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @pci_get_cfgdata8(%struct.pci_devinst* %11, i32 %12)
  store i32 %13, i32* %4, align 4
  br label %25

14:                                               ; preds = %3
  %15 = load i32, i32* %7, align 4
  %16 = icmp eq i32 %15, 2
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load %struct.pci_devinst*, %struct.pci_devinst** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @pci_get_cfgdata16(%struct.pci_devinst* %18, i32 %19)
  store i32 %20, i32* %4, align 4
  br label %25

21:                                               ; preds = %14
  %22 = load %struct.pci_devinst*, %struct.pci_devinst** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @pci_get_cfgdata32(%struct.pci_devinst* %22, i32 %23)
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %21, %17, %10
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @pci_get_cfgdata8(%struct.pci_devinst*, i32) #1

declare dso_local i32 @pci_get_cfgdata16(%struct.pci_devinst*, i32) #1

declare dso_local i32 @pci_get_cfgdata32(%struct.pci_devinst*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
